pinneapple_app/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pinneapple
  labels:
    app.kubernetes.io/part-of: pinneapple-app
